--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
     <title>ajax-client example</title>
 </head>
 <body>
-<script src="ajaxclient.js"></script>
+<script src="ajax-client.js"></script>
 <script>
-    const ajax = new org.riversun.AjaxClient();
+    const ajax = new AjaxClient();
 
     //Data object to send
     const data = {
