--- a/public/index.html
+++ b/public/index.html
@@ -7,34 +7,35 @@
 <body>
 <script src="ajax-client.js"></script>
 <script>
-    const ajax = new AjaxClient();
+  const ajax = new AjaxClient();
 
-    //Data object to send
-    const data = {
-        message: "hello"
+  //Data object to send
+  const data = {
+    message: "hello"
+  }
+
+  //Do async post request
+  ajax.ajax({
+    type: 'post',
+    url: 'http://localhost:9999/api',//Endpoint
+    headers: {
+      'X-Original-Header1': 'header-value-1',//Additional Headers
+      'X-Original-Header2': 'header-value-2',
+    },
+    contentType: 'application/json; charset = UTF-8',//content-type of sending data
+    data: JSON.stringify(data),//text data
+    dataType: 'json',//data type to parse when receiving response from server
+    timeoutMillis: 5000,//timeout milli-seconds
+    success: response => {
+      document.write(JSON.stringify(response));
+    },
+    error: e => {
+      console.error('Error occurred');
+    },
+    timeout: e => {
+      console.error('Timeout occurred.');
     }
-
-    //Do async post request
-    ajax.postAsync({
-        url: 'http://localhost:9999/api',//Endpoint
-        headers: {
-            'X-Original-Header1': 'header-value-1',//Additional Headers
-            'X-Original-Header2': 'header-value-2',
-        },
-        contentType: 'application/json; charset = UTF-8',//content-type of sending data
-        data: JSON.stringify(data),//text data
-        dataType: 'json',//data type to parse when receiving response from server
-        timeoutMillis: 5000,//timeout milli-seconds
-        success: response => {
-            console.log(response);
-        },
-        error: e => {
-            console.error('Error occurred');
-        },
-        timeout: e => {
-            console.error('Timeout occurred.');
-        }
-    });
+  });
 
 </script>
 </body>
