--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 <script>
   const ajax = new AjaxClient();
 
+  console.log(ajax.ajax);
   //Data object to send
   const data = {
     message: "hello"
