--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
     timeoutMillis: 5000,//timeout milli-seconds
     success: response => {
       document.write(JSON.stringify(response));
+      document.write('<hr>');
     },
     error: e => {
       console.error('Error occurred');
@@ -35,6 +36,65 @@
     timeout: e => {
       console.error('Timeout occurred.');
     }
+  });
+
+  // 1st withCredentials:true
+  ajax.ajax({
+    type: 'post',
+    url: 'http://localhost:9999/api-auth',//Endpoint
+    contentType: 'application/json',//content-type of sending data
+    data: JSON.stringify({
+      message: "withCredentials-access-1"
+    }),//text data
+    dataType: 'json',//data type to parse when receiving response from server
+    crossDomain: true,
+    xhrFields: {
+      withCredentials: true,
+    },
+    success: (json, xhr) => {
+      document.body.innerHTML += 'withCredentials:true success:' + JSON.stringify(json) + '<hr>';
+    },
+  });
+
+  // 2nd withCredentials:true
+  ajax.ajax({
+    type: 'post',
+    url: 'http://localhost:9999/api-auth',//Endpoint
+    contentType: 'application/json',//content-type of sending data
+    data: JSON.stringify({
+      message: "withCredentials-access-2"
+    }),//text data
+    dataType: 'json',//data type to parse when receiving response from server
+    crossDomain: true,
+    xhrFields: {
+      withCredentials: true,
+    },
+    success: (json, xhr) => {
+      document.body.innerHTML += 'withCredentials:true success:' + JSON.stringify(json) + '<hr>';
+    },
+  });
+
+  // form post
+   ajax.ajax({
+    type: 'post',
+     url: 'http://localhost:9999/form',//Endpoint
+    headers: {
+      'X-Original-Header1': 'header-value-1',//Additional Headers
+      'X-Original-Header2': 'header-value-2',
+    },
+    contentType: 'application/x-www-form-urlencoded',
+    data: {
+      message:'Hello 〇□×△'
+    },
+    dataType: 'json',//data type to parse when receiving response from server
+    timeoutMillis: 5000,//timeout milli-seconds
+    crossDomain: true,
+    xhrFields: {
+      withCredentials: true,
+    },
+     success: (json, xhr) => {
+       document.body.innerHTML += 'form post:' + JSON.stringify(json) + '<hr>';
+     },
   });
 
 </script>
