--- a/public/index_ajax2.html
+++ b/public/index_ajax2.html
@@ -26,10 +26,10 @@
     dataType: 'json',//data type to parse when receiving response from server
     timeoutMillis: 5000,//timeout milli-seconds
     success: (json, xhr) => {
-      document.body.innerHTML += 'json success:' + JSON.stringify(json) + '<br>';
+      document.body.innerHTML += 'json success:' + JSON.stringify(json) + '<hr>';
     },
   }).done((json) => {
-    document.body.innerHTML += 'json done:' + JSON.stringify(json) + '<br>';
+    // document.body.innerHTML += 'json done:' + JSON.stringify(json) + '<hr>';
   });
 
 
@@ -40,10 +40,71 @@
     contentType: 'application/json',//content-type of sending data
     dataType: 'jsonp',
     success: (json, xhr) => {
-      document.body.innerHTML += 'jsonp success:' + JSON.stringify(json) + '<br>';
+      document.body.innerHTML += 'jsonp success:' + JSON.stringify(json) + '<hr>';
     },
   }).done((json) => {
-    document.body.innerHTML += 'jsonp done:' + JSON.stringify(json) + '<br>';
+    // document.body.innerHTML += 'jsonp done:' + JSON.stringify(json) + '<br>';
+  });
+
+  // 1st withCredentials:true
+  ajax.ajax({
+    type: 'post',
+    url: 'http://localhost:9999/api-auth',//Endpoint
+    contentType: 'application/json',//content-type of sending data
+    data: JSON.stringify({
+      message: "withCredentials-access-1"
+    }),//text data
+    dataType: 'json',//data type to parse when receiving response from server
+    crossDomain: true,
+    xhrFields: {
+      withCredentials: true,
+    },
+    success: (json, xhr) => {
+      document.body.innerHTML += 'withCredentials:true success:' + JSON.stringify(json) + '<hr>';
+    },
+  }).done((json) => {
+  });
+
+  // 2nd withCredentials:true
+  ajax.ajax({
+    type: 'post',
+    url: 'http://localhost:9999/api-auth',//Endpoint
+    contentType: 'application/json',//content-type of sending data
+    data: JSON.stringify({
+      message: "withCredentials-access-2"
+    }),//text data
+    dataType: 'json',//data type to parse when receiving response from server
+    crossDomain: true,
+    xhrFields: {
+      withCredentials: true,
+    },
+    success: (json, xhr) => {
+      document.body.innerHTML += 'withCredentials:true success:' + JSON.stringify(json) + '<hr>';
+    },
+  }).done((json) => {
+  });
+
+  // form post
+  ajax.ajax({
+    type: 'post',
+    url: 'http://localhost:9999/form',//Endpoint
+    headers: {
+      'X-Original-Header1': 'header-value-1',//Additional Headers
+      'X-Original-Header2': 'header-value-2',
+    },
+    contentType: 'application/x-www-form-urlencoded',
+    data: {
+      message: 'Hello 〇□×△'
+    },
+    dataType: 'json',//data type to parse when receiving response from server
+    timeoutMillis: 5000,//timeout milli-seconds
+    crossDomain: true,
+    xhrFields: {
+      withCredentials: true,
+    },
+    success: (json, xhr) => {
+      document.body.innerHTML += 'form post:' + JSON.stringify(json) + '<hr>';
+    },
   });
 
 </script>
